Fixed labels wrapping

--- a/fe/src/project/AspNetCore/shared/components/Modal/Modal.scss
+++ b/fe/src/project/AspNetCore/shared/components/Modal/Modal.scss
@@ -5,4 +5,8 @@
         text-align: center;
         max-width: 12rem;
     }
+
+    .MuiInputLabel-root {
+        white-space: nowrap;
+    }
 }
